Added notes on linked-lists

--- a/arrays&Lists/1. Arrays.md
+++ b/arrays&Lists/1. Arrays.md
@@ -1,6 +1,6 @@
 # Arrays
 
-<img src=array.svg width=300 blue>
+<img src=array.svg width=350 blue>
 
 ## Summary
 
@@ -14,7 +14,7 @@
 
 #### Operations On arrays and their complexities
 
-1. Indexing : O(1) - constant time.
+1. Indexing > : O(1) - constant time.
 2. Traversal : O(n) - linear.
 3. Insertion : O(1) - constant time.
 4. Modifying an element : O(1) - constant time
