Placed svgs into folder and corrected some errors in notes

--- a/arrays&Lists/1. Arrays.md
+++ b/arrays&Lists/1. Arrays.md
@@ -1,6 +1,6 @@
 # Arrays
 
-<img src=array.svg width=350 blue>
+<img src=images/array.svg width=350 blue>
 
 ## Summary
 
@@ -56,7 +56,7 @@ Let A be an array, containing elements of some data type.
 
 ## A :
 
-<img src=array.svg width=250 >
+<img src=images/array.svg width=250 >
 
     int A[DEFAULT_SIZE]		// A is created with a fixed default size;
     int end = -1; 		// keep count of elements (count = end + 1);
