--- a/arrays&Lists/2. linkedLists.md
+++ b/arrays&Lists/2. linkedLists.md
@@ -1,6 +1,6 @@
 # Linked lists
 
-<image src="linkedList.svg" width=500 />  
+<image src="images/linkedList.svg" width=500 />  
 <br />  
 <br />
 
@@ -13,22 +13,24 @@ requesting and initializing memory as and when needed.
 1. Each element/ node has two parts;  
    one part to store the data and another part to store the memory address  
    of the next element.
-2. The first node is known as the head node
-3. The address of the head gives access to the entire list
-4. Acess to elements is linear and uni-directional.  
+2. The first node is known as the **_head node_**
+3. The last node is called the **_tailnode_**
+4. The address of the head gives access to the entire list
+5. The address stored in the tail node is a null pointer  
+   ie. The tail node doesn't point to anything.
+6. Acess to elements is linear and uni-directional.  
    i.e. access to element g will require that we first access the  
    head and look for the next element until g is found or obtained.
-5. It is easy to insert and remove elements without shifting.
-6. At any point, memory requested for is used hence, there is no free memory.
+7. It is easy to insert and remove elements without shifting.
+8. At any point, memory requested for is used hence, there is no free memory.
 
 ### Operations on linked lists:
 
-1. Indexing : O(n) - linear time.
-2. Traversal : O(1) - constant time.
-3. Insertion : O(n) - linear time.
-4. Modifying an element : O(n) - linear time
-5. Deleting an element : O(n) - linear time
-6. Counting Number of elements : O(n) - linear time
+1. Traversal : O(n) - linear time.
+2. Insertion : O(n) - linear time.
+3. Modifying an element : O(n) - linear time
+4. Deleting an element : O(n) - linear time
+5. Counting Number of elements : O(n) - linear time
 
 ## Caveats
 
@@ -38,7 +40,10 @@ requesting and initializing memory as and when needed.
   we could first need to travers the list all the way to x position before  
   performing the insert.
 - Just like insertion, deletion is also time costly[O(n)] for the same reason.
+- Counting the number of elements also costs time  
+  This is because the last we need to look for the node that has the null  
+  pointer which indicates the end of the list. for large sized lists this costs time.
 
 ## Pros
 
-- all memory acquired is used and there is no unused memory.
+- All memory acquired is used and there is no unused memory.
