finished implementing all functions of linked list

--- a/arrays&Lists/2. linkedLists.md
+++ b/arrays&Lists/2. linkedLists.md
@@ -30,7 +30,9 @@ requesting and initializing memory as and when needed.
 2. Insertion : O(n) - linear time.
 3. Modifying an element : O(n) - linear time
 4. Deleting an element : O(n) - linear time
-5. Counting Number of elements : O(n) - linear time
+5. Counting Number of elements : O(n) - linear time  
+NB: some of the operations don't have to be linear time depending  
+on implementation used;
 
 ## Caveats
 
