--- a/arrays&Lists/Notes/2. linkedLists.md
+++ b/arrays&Lists/Notes/2. linkedLists.md
@@ -1,6 +1,6 @@
 # Linked lists
 
-<image src="images/linkedList.svg" width=500 />  
+<image src="../images/linkedList.svg" width=500 />  
 <br />  
 <br />
 
